--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<meta name="viewport" content="width=, initial-scale=1.0">
 	<link r​el​="​preload" ​href​="fonts/Abel-Regular.woff" ​a​s​="​font" ​>
 	<link r​el​="​preload" ​href​="fonts/Abel-Regular.woff2" ​a​s​="​font" ​>
+	<link rel="stylesheet" href="swiper/swiper-bundle.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/flex.css">
 	<link rel="stylesheet" type="text/css" href="css/media.css">
-	<link rel="stylesheet" href="swiper/swiper-bundle.min.css">
 	<title>Executive study abroad</title>
 </head>
 <body>
@@ -48,7 +48,6 @@
 
 			<div class="wrapper wrapper__oval">
 				<section class="banner container">
-					<!-- <img class="banner__img--oval" src="img/oval.png" alt=" oval" width="1030" height="581"> -->
 					<div class="banner__wrapper">
 						<div class="banner__text">
 							<h1 class="banner__title">We Help to
@@ -63,16 +62,12 @@
 							</div>
 							<button class="button banner__button">
 								<span class="button__text">Apply Online</span>
-								<!-- <img  class="button__arrow" src="img/icon/arrow.svg" alt="arrow" width="18" height="16"> -->
 								<svg class="button__arrow" width="18" height="16">
 									<use xlink:href="sprite.svg#arrow"></use>
 								</svg>
 							</button>
 						</div>
 						<div class="social">
-							<!-- <img class="social__icon social__icon--fb" src="img/icon/facebook.svg" alt="facebook" width="11" height="20">
-							<img class="social__icon social__icon--twitter" src="img/icon/twitter.svg" alt="twitter" width="21" height="18">
-							<img class="social__icon social__icon--inst" src="img/icon/instagram.svg" alt="instagram" width="21" height="22"> -->
 							<svg class="social__icon social__icon--fb social__icon--banner" width="11" height="20">
 								<use xlink:href="sprite.svg#facebook"></use>
 							</svg>
@@ -98,31 +93,37 @@
 			<div class="wrapper background-grey">
 				<section class="featured container">
 					<p class="featured__title">Featured Universities</p>
-					<!-- <div class="featured__slider">
-						<img class="featured__img" src="img/featured_1.png" alt="featured" width="225" height="68">
-						<img class="featured__img" src="img/featured_2.png" alt="featured" width="250" height="64">
-						<img class="featured__img" src="img/featured_3.png" alt="featured" width="224" height="79">
-						<img class="featured__img" src="img/featured_4.png" alt="featured" width="275" height="62">
-					</div> -->
-					<!-- <div class="featured__curcle">
-						<div class="featured__circule--purple"></div>
-						<div class="featured__circule--grey"></div>
-					</div> -->
 					<div class="swiper-container">
-						<!-- Additional required wrapper -->
 						<div class="swiper-wrapper">
-							<!-- Slides -->
-							<img class="swiper-slide featured__img" src="img/featured_1.png" width="225" height="68"></img>
-							<img class="swiper-slide featured__img" src="img/featured_2.png" width="225" height="68"></img>
-							<img class="swiper-slide featured__img" src="img/featured_3.png" width="225" height="68"></img>
-							<img class="swiper-slide featured__img" src="img/featured_4.png" width="225" height="68"></img>
-							<img class="swiper-slide featured__img" src="img/featured_1.png" width="225" height="68"></img>
-							<img class="swiper-slide featured__img" src="img/featured_2.png" width="225" height="68"></img>
-							<img class="swiper-slide featured__img" src="img/featured_3.png" width="225" height="68"></img>
-							<img class="swiper-slide featured__img" src="img/featured_4.png" width="225" height="68"></img>
-							...
+							<div class="swiper-slide">
+								<img class="featured__img" src="img/featured_1.png" alt="featured" width="225" height="68">
+							</div>
+							<div class="swiper-slide">
+								<img class="featured__img" src="img/featured_2.png" alt="featured" width="250" height="64">
+							</div>
+							<div class="swiper-slide">
+								<img class="featured__img" src="img/featured_3.png" alt="featured" width="224" height="79">
+							</div>
+							<div class="swiper-slide">
+								<img class="featured__img" src="img/featured_4.png" alt="featured" width="275" height="62">
+							</div>
+							<div class="swiper-slide">
+								<img class="featured__img" src="img/featured_1.png" alt="featured" width="225" height="68">
+							</div>
+							<div class="swiper-slide">
+								<img class="featured__img" src="img/featured_2.png" alt="featured" width="250" height="64">
+							</div>
+							<div class="swiper-slide">
+								<img class="featured__img" src="img/featured_3.png" alt="featured" width="224" height="79">
+							</div>
+							<div class="swiper-slide">
+								<img class="featured__img" src="img/featured_4.png" alt="featured" width="275" height="62">
+							</div>
 						</div>
+						<!-- Add Pagination -->
+						<div class="swiper-pagination"></div>
 					</div>
+
 				</section>
 			</div>
 			<!-- Наши услуги -->
@@ -153,7 +154,6 @@
 								</p>
 								<div class="button-more">
 									<a class="button-more__link" href="#">Learn more</a>
-									<!-- <img class="button-more__img" src="img/icon/arrow.svg" alt="arrow" width="24" height="24"> -->
 									<svg class="button__arrow" width="18" height="16">
 										<use xlink:href="sprite.svg#arrow"></use>
 									</svg>
@@ -163,7 +163,6 @@
 						<article class="services__card">
 							<div class="card">
 								<div class="card__mobile">
-									<!-- <img class="card__img" src="img/icon/services_2.svg" alt="icon" width="76" height="76"> -->
 									<div class="card__svg-container services2">
 										<svg class="icon" width="26" height="26">
 											<use xlink:href="sprite.svg#services2"></use>
@@ -177,7 +176,6 @@
 								</p>
 								<div class="button-more">
 									<a class="button-more__link" href="#">Learn more</a>
-									<!-- <img class="button-more__img" src="img/icon/arrow.svg" alt="arrow" width="24" height="24"> -->
 									<svg class="button__arrow" width="18" height="16">
 										<use xlink:href="sprite.svg#arrow"></use>
 									</svg>
@@ -187,7 +185,6 @@
 						<article class="services__card">
 							<div class="card">
 								<div class="card__mobile">
-									<!-- <img class="card__img" src="img/icon/services_3.svg" alt="icon" width="76" height="76"> -->
 									<div class="card__svg-container services3">
 										<svg class="icon" widht="22" height="29">
 											<use xlink:href="sprite.svg#services3"></use>
@@ -201,7 +198,6 @@
 								</p>
 								<div class="button-more">
 									<a class="button-more__link" href="#">Learn more</a>
-									<!-- <img class="button-more__img" src="img/icon/arrow.svg" alt="arrow" width="24" height="24"> -->
 									<svg class="button__arrow" width="18" height="16">
 										<use xlink:href="sprite.svg#arrow"></use>
 									</svg>
@@ -211,7 +207,6 @@
 						<article class="services__card">
 							<div class="card">
 								<div class="card__mobile">
-									<!-- <img class="card__img" src="img/icon/services_4.svg" alt="icon" width="76" height="76"> -->
 									<div class="card__svg-container services4">
 										<svg class="icon" width="23" height="28">
 											<use xlink:href="sprite.svg#services4"></use>
@@ -225,7 +220,6 @@
 								</p>
 								<div class="button-more">
 									<a class="button-more__link" href="#">Learn more</a>
-									<!-- <img class="button-more__img" src="img/icon/arrow.svg" alt="arrow" width="24" height="24"> -->
 									<svg class="button__arrow" width="18" height="16">
 										<use xlink:href="sprite.svg#arrow"></use>
 									</svg>
@@ -235,7 +229,6 @@
 						<article class="services__card">
 							<div class="card">
 								<div class="card__mobile">
-									<!-- <img class="card__img" src="img/icon/services_5.svg" alt="icon" width="76" height="76"> -->
 									<div class="card__svg-container services5">
 										<svg class="icon" width="26" height="18">
 											<use xlink:href="sprite.svg#services5"></use>
@@ -249,7 +242,6 @@
 								</p>
 								<div class="button-more">
 									<a class="button-more__link" href="#">Learn more</a>
-									<!-- <img class="button-more__img" src="img/icon/arrow.svg" alt="arrow" width="24" height="24"> -->
 									<svg class="button__arrow" width="18" height="16">
 										<use xlink:href="sprite.svg#arrow"></use>
 									</svg>
@@ -278,7 +270,6 @@
 							</picture>
 							<div class="date__wrapper">
 								<div class="date">
-									<!-- <img class="date__icon" src="img/icon/calendar.svg" alt="calendar" width="14" height="14"> -->
 									<svg class="date__icon" width="14" height="14">
 										<use xlink:href="sprite.svg#calendar"></use>
 									</svg>
@@ -296,7 +287,6 @@
 							</picture>
 							<div class="date__wrapper">
 								<div class="date">
-									<!-- <img class="date__icon" src="img/icon/calendar.svg" alt="calendar" width="14" height="14"> -->
 									<svg class="date__icon" width="14" height="14">
 										<use xlink:href="sprite.svg#calendar"></use>
 									</svg>
@@ -314,7 +304,6 @@
 							</picture>
 							<div class="date__wrapper">
 								<div class="date">
-									<!-- <img class="date__icon" src="img/icon/calendar.svg" alt="calendar" width="14" height="14"> -->
 									<svg class="date__icon" width="14" height="14">
 										<use xlink:href="sprite.svg#calendar"></use>
 									</svg>
@@ -329,7 +318,6 @@
 					<div class="news__button">
 						<button class="button button__small">
 							<span class="button__text">Join Here</span>
-							<!-- <img class="button__arrow" src="img/icon/arrow.svg" alt="arrow" width="18" height="16"> -->
 							<svg class="button__arrow" width="18" height="16">
 								<use xlink:href="sprite.svg#arrow"></use>
 							</svg>
@@ -349,83 +337,162 @@
 							ante cum teneam sententiam, quid bonum esse vult.
 						</p>
 					</div>
-					<div class="event__wrapper">
-						<article class="event__card">
-							<div class="event__info">
-								<div class="event__date">
-									<span class="event__big-text"> 23 </span>
-									<span  class="event__mini-text">Dec</span>
+
+					<div class="swiper-container_2">
+						<div class="swiper-wrapper-2">
+
+							<div class="swiper-slide event__card">
+
+
+								<div class="event__info">
+									<div class="event__date">
+										<span class="event__big-text"> 23 </span>
+										<span class="event__mini-text">Dec</span>
+									</div>
+									<div class="event__location">
+										<p class="event__location event__location-text">
+											Macquarie University,
+											<br> Sydney, Australia
+										</p>
+									</div>
 								</div>
-								<div class="event__location">
-									<p class="event__location event__location-text">
-										Macquarie University,
-										<br> Sydney, Australia
+								<div class="event__description">
+									<p class="event__description-text card__text">
+										Maiores voluptas laboriosam non dolorum perferendis fuga
+										repellat aut. Blanditiis quos in minus. Voluptatum quia quia
+										voluptas voluptatem vero ex possimus. Iure et consectetur dolorem
+										dicta accusantium fugiat.
 									</p>
 								</div>
-							</div>
-							<div class="event__description">
-								<p class="event__description-text card__text">
-									Maiores voluptas laboriosam non dolorum perferendis fuga
-									repellat aut. Blanditiis quos in minus. Voluptatum quia quia
-									voluptas voluptatem vero ex possimus. Iure et consectetur dolorem
-									dicta accusantium fugiat.
-								</p>
-							</div>
-							<div class="event__link">
-								<div class="button-more">
-									<a class="button-more__link" href="#">Learn More</a>
-									<!-- <img class="button-more__img" src="img/icon/arrow.svg" alt="arrow" width="16" height="15"> -->
-									<svg class="button__arrow" width="18" height="16">
-										<use xlink:href="sprite.svg#arrow"></use>
-									</svg>
+								<div class="event__link">
+									<div class="button-more">
+										<a class="button-more__link" href="#">Learn More</a>
+											<svg class="button__arrow" width="18" height="16">
+												<use xlink:href="sprite.svg#arrow"></use>
+											</svg>
+									</div>
+									<div class="event__time">
+										<svg class="event__time-icon" width="17" height="17">
+											<use xlink:href="sprite.svg#time"></use>
+										</svg>
+										<time class="event__time-text">10:00 AM - 2:00 PM</time>
+									</div>
 								</div>
-								<div class="event__time">
-									<!-- <img class="event__time-icon" src="img/time.svg" alt="time" width="17" height="17"> -->
-									<svg class="event__time-icon" width="17" height="17">
-										<use xlink:href="sprite.svg#time"></use>
-									</svg>
-									<time class="event__time-text" >10:00 AM - 2:00 PM</time>
-								</div>
+
+
 							</div>
-						</article>
-						<article class="event__card">
-							<div class="event__info">
-								<div class="event__date">
-									<span class="event__big-text"> 17 </span>
-									<span class="event__mini-text">Dec</span>
+
+							<div class="swiper-slide event__card">
+								<div class="event__info">
+									<div class="event__date">
+										<span class="event__big-text"> 17 </span>
+										<span class="event__mini-text">Dec</span>
+									</div>
+									<div class="event__location">
+										<p class="event__location-text">
+											Federation University,
+											<br> Australia
+										</p>
+									</div>
 								</div>
-								<div class="event__location">
-									<p class="event__location-text">
-										Federation University,
-										<br> Australia
+								<div class="event__description">
+									<p class="event__description-text card__text">
+										Maiores voluptas laboriosam non dolorum perferendis fuga
+										repellat aut. Blanditiis quos in minus. Voluptatum quia quia
+										voluptas voluptatem vero ex possimus. Iure et consectetur dolorem
+										dicta accusantium fugiat.
 									</p>
 								</div>
-							</div>
-							<div class="event__description">
-								<p class="event__description-text card__text">
-									Maiores voluptas laboriosam non dolorum perferendis fuga
-									repellat aut. Blanditiis quos in minus. Voluptatum quia quia
-									voluptas voluptatem vero ex possimus. Iure et consectetur dolorem
-									dicta accusantium fugiat.
-								</p>
-							</div>
-							<div class="event__link">
-								<div class="button-more">
-									<a  class="button-more__link" href="#">Learn More</a>
-									<!-- <img class="button-more__img" src="img/icon/arrow.svg" alt="arrow" width="16" height="15"> -->
-									<svg class="button__arrow" width="18" height="16">
-										<use xlink:href="sprite.svg#arrow"></use>
-									</svg>
-								</div>
-								<div class="event__time">
-									<!-- <img class="event__time-icon" src="img/time.svg" alt="time" width="17" height="17"> -->
-									<svg class="event__time-icon" width="17" height="17">
-										<use xlink:href="sprite.svg#time"></use>
-									</svg>
-									<time class="event__time-text">10:00 AM - 2:00 PM</time>
+								<div class="event__link">
+									<div class="button-more">
+										<a class="button-more__link" href="#">Learn More</a>
+										<svg class="button__arrow" width="18" height="16">
+											<use xlink:href="sprite.svg#arrow"></use>
+										</svg>
+									</div>
+									<div class="event__time">
+										<svg class="event__time-icon" width="17" height="17">
+											<use xlink:href="sprite.svg#time"></use>
+										</svg>
+										<time class="event__time-text">10:00 AM - 2:00 PM</time>
+									</div>
 								</div>
 							</div>
-						</article>
+							<div class="swiper-slide event__card">
+
+								<div class="event__info">
+									<div class="event__date">
+										<span class="event__big-text"> 23 </span>
+										<span class="event__mini-text">Dec</span>
+									</div>
+									<div class="event__location">
+										<p class="event__location event__location-text">
+											Macquarie University,
+											<br> Sydney, Australia
+										</p>
+									</div>
+								</div>
+								<div class="event__description">
+									<p class="event__description-text card__text">
+										Maiores voluptas laboriosam non dolorum perferendis fuga
+										repellat aut. Blanditiis quos in minus. Voluptatum quia quia
+										voluptas voluptatem vero ex possimus. Iure et consectetur dolorem
+										dicta accusantium fugiat.
+									</p>
+								</div>
+								<div class="event__link">
+									<div class="button-more">
+										<a class="button-more__link" href="#">Learn More</a>
+										<svg class="button__arrow" width="18" height="16">
+											<use xlink:href="sprite.svg#arrow"></use>
+										</svg>
+									</div>
+									<div class="event__time">
+										<svg class="event__time-icon" width="17" height="17">
+											<use xlink:href="sprite.svg#time"></use>
+										</svg>
+										<time class="event__time-text">10:00 AM - 2:00 PM</time>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-slide event__card">
+								<div class="event__info">
+									<div class="event__date">
+										<span class="event__big-text"> 17 </span>
+										<span class="event__mini-text">Dec</span>
+									</div>
+									<div class="event__location">
+										<p class="event__location-text">
+											Federation University,
+											<br> Australia
+										</p>
+									</div>
+								</div>
+								<div class="event__description">
+									<p class="event__description-text card__text">
+										Maiores voluptas laboriosam non dolorum perferendis fuga
+										repellat aut. Blanditiis quos in minus. Voluptatum quia quia
+										voluptas voluptatem vero ex possimus. Iure et consectetur dolorem
+										dicta accusantium fugiat.
+									</p>
+									</div>
+									<div class="event__link">
+									<div class="button-more">
+										<a class="button-more__link" href="#">Learn More</a>
+										<svg class="button__arrow" width="18" height="16">
+											<use xlink:href="sprite.svg#arrow"></use>
+										</svg>
+									</div>
+									<div class="event__time">
+										<svg class="event__time-icon" width="17" height="17">
+											<use xlink:href="sprite.svg#time"></use>
+										</svg>
+										<time class="event__time-text">10:00 AM - 2:00 PM</time>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-pagination"></div>
 					</div>
 				</section>
 			</div>
