--- a/index.html
+++ b/index.html
@@ -339,11 +339,10 @@
 					</div>
 
 					<div class="swiper-container_2">
-						<div class="swiper-wrapper-2">
+
+						<div class="swiper-wrapper">
 
 							<div class="swiper-slide event__card">
-
-
 								<div class="event__info">
 									<div class="event__date">
 										<span class="event__big-text"> 23 </span>
@@ -378,8 +377,6 @@
 										<time class="event__time-text">10:00 AM - 2:00 PM</time>
 									</div>
 								</div>
-
-
 							</div>
 
 							<div class="swiper-slide event__card">
@@ -418,8 +415,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="swiper-slide event__card">
 
+							<div class="swiper-slide event__card">
 								<div class="event__info">
 									<div class="event__date">
 										<span class="event__big-text"> 23 </span>
@@ -455,6 +452,7 @@
 									</div>
 								</div>
 							</div>
+
 							<div class="swiper-slide event__card">
 								<div class="event__info">
 									<div class="event__date">
@@ -491,6 +489,42 @@
 									</div>
 								</div>
 							</div>
+							<div class="swiper-slide event__card">
+								<div class="event__info">
+									<div class="event__date">
+										<span class="event__big-text"> 23 </span>
+										<span class="event__mini-text">Dec</span>
+									</div>
+									<div class="event__location">
+										<p class="event__location event__location-text">
+											Macquarie University,
+											<br> Sydney, Australia
+										</p>
+									</div>
+								</div>
+								<div class="event__description">
+									<p class="event__description-text card__text">
+										Maiores voluptas laboriosam non dolorum perferendis fuga
+										repellat aut. Blanditiis quos in minus. Voluptatum quia quia
+										voluptas voluptatem vero ex possimus. Iure et consectetur dolorem
+										dicta accusantium fugiat.
+									</p>
+								</div>
+								<div class="event__link">
+									<div class="button-more">
+										<a class="button-more__link" href="#">Learn More</a>
+										<svg class="button__arrow" width="18" height="16">
+											<use xlink:href="sprite.svg#arrow"></use>
+										</svg>
+									</div>
+									<div class="event__time">
+										<svg class="event__time-icon" width="17" height="17">
+											<use xlink:href="sprite.svg#time"></use>
+										</svg>
+										<time class="event__time-text">10:00 AM - 2:00 PM</time>
+									</div>
+								</div>
+							</div>
 						</div>
 						<div class="swiper-pagination"></div>
 					</div>
@@ -511,7 +545,7 @@
 							ante cum teneam sententiam, quid bonum esse vult.
 						</p>
 					</div>
-					<div class="countries__wrapper">
+					<!-- <div class="countries__wrapper">
 						<article class="countries__card">
 							<pictures class="countries__img">
 								<source srcset="./img/countries.png, ./img/retina/countries-retina1.png 2x" class="countries__img">
@@ -554,7 +588,98 @@
 								voluptatum voluptate porro harum. Facilis voluptatum eum est.
 							</p>
 						</article>
+					</div> -->
+
+					<div class="swiper-container_3">
+						<div class="swiper-wrapper countries__wrapper">
+							<div class="swiper-slide countries__card">
+								<pictures class="countries__img">
+									<source srcset="./img/countries.png, ./img/retina/countries-retina1.png 2x" class="countries__img">
+									<img src="img/countries_1.png" alt="countries" width="348" height="215" class="countries__img">
+								</pictures>
+								<h3 class="countries__text">
+									Study in Australia
+								</h3>
+								<p class="countries__subtitle card__text">
+									Ut aut corporis accusantium illo ullam qui laudantium.
+									Maxime rerum sunt et sequi sed qui rerum hic. Voluptatem maiores
+									voluptatum voluptate porro harum. Facilis voluptatum eum est.
+								</p>
+							</div>
+							<div class="swiper-slide countries__card">
+								<pictures class="countries__img">
+									<source srcset="./img/countries_2.png, ./img/retina/countries-retina2.png 2x" class="countries__img">
+									<img srcset="./img/countries_2.png" alt="countries" width="348" height="215" class="countries__img">
+								</pictures>
+								<h3 class="countries__text">
+									Study in Canada
+								</h3>
+								<p class="countries__subtitle card__text">
+									Ut aut corporis accusantium illo ullam qui laudantium.
+									Maxime rerum sunt et sequi sed qui rerum hic. Voluptatem maiores
+									voluptatum voluptate porro harum. Facilis voluptatum eum est.
+								</p>
+							</div>
+							<div class="swiper-slide countries__card">
+								<pictures class="countries__img">
+									<source srcset="./img/countries_3.png, ./img/retina/countries-retina3.png 2x" class="countries__img">
+									<img srcset="img/countries_3.png" alt="countries" width="348" height="215" class="countries__img">
+									</pictires>
+									<h3 class="countries__text">
+										Study in Canada
+									</h3>
+									<p class="countries__subtitle card__text">
+										Ut aut corporis accusantium illo ullam qui laudantium.
+										Maxime rerum sunt et sequi sed qui rerum hic. Voluptatem maiores
+										voluptatum voluptate porro harum. Facilis voluptatum eum est.
+									</p>
+							</div>
+							<div class="swiper-slide countries__card">
+								<pictures class="countries__img">
+									<source srcset="./img/countries.png, ./img/retina/countries-retina1.png 2x" class="countries__img">
+									<img src="img/countries_1.png" alt="countries" width="348" height="215" class="countries__img">
+								</pictures>
+								<h3 class="countries__text">
+									Study in Australia
+								</h3>
+								<p class="countries__subtitle card__text">
+									Ut aut corporis accusantium illo ullam qui laudantium.
+									Maxime rerum sunt et sequi sed qui rerum hic. Voluptatem maiores
+									voluptatum voluptate porro harum. Facilis voluptatum eum est.
+								</p>
+							</div>
+							<div class="swiper-slide countries__card">
+								<pictures class="countries__img">
+									<source srcset="./img/countries_2.png, ./img/retina/countries-retina2.png 2x" class="countries__img">
+									<img srcset="./img/countries_2.png" alt="countries" width="348" height="215" class="countries__img">
+								</pictures>
+								<h3 class="countries__text">
+									Study in Canada
+								</h3>
+								<p class="countries__subtitle card__text">
+									Ut aut corporis accusantium illo ullam qui laudantium.
+									Maxime rerum sunt et sequi sed qui rerum hic. Voluptatem maiores
+									voluptatum voluptate porro harum. Facilis voluptatum eum est.
+								</p>
+							</div>
+							<div class="swiper-slide countries__card">
+								<pictures class="countries__img">
+									<source srcset="./img/countries_3.png, ./img/retina/countries-retina3.png 2x" class="countries__img">
+									<img srcset="img/countries_3.png" alt="countries" width="348" height="215" class="countries__img">
+									</pictires>
+									<h3 class="countries__text">
+										Study in Canada
+									</h3>
+									<p class="countries__subtitle card__text">
+										Ut aut corporis accusantium illo ullam qui laudantium.
+										Maxime rerum sunt et sequi sed qui rerum hic. Voluptatem maiores
+										voluptatum voluptate porro harum. Facilis voluptatum eum est.
+									</p>
+							</div>
+						</div>
+						<div class="swiper-pagination"></div>
 					</div>
+
 				</section>
 			</div>
 
@@ -562,6 +687,9 @@
 
 			<div class="wrapper">
 				<section class="testimonial container">
+					<div class="testimonial__green">
+						<img src="img/green_detail.png" alt="green" width="196" height="1274">
+					</div>
 					<div class="testimonial__title">
 						<h2 class="title">
 							Testimonial
@@ -571,14 +699,8 @@
 							alterum. Si sine causa? quae fuerit causa, mox videro; interea hoc epicurus in liberos.
 						</p>
 					</div>
-					<div class="testimonial__wrapper">
+					<!-- <div class="testimonial__wrapper">
 						<article class="testimonial__card">
-
-							<!-- зеленая деталь, можно вставить псевдоэлементом? -->
-							<!-- <div>
-								<img src="img/green_detail.png" alt="green" width="196" height="1274">
-							</div> -->
-
 							<div class="people">
 								<img class="people__img" src="img/testimonial_1.png" alt="face" width="62" height="62">
 								<div class="people__card">
@@ -628,6 +750,124 @@
 								</p>
 							</div>
 						</article>
+					</div> -->
+
+					<div class="swiper-container_4">
+						<div class="swiper-wrapper">
+							<div class="swiper_slide">
+								<article class="testimonial__card">
+									<div class="people">
+										<img class="people__img" src="img/testimonial_1.png" alt="face" width="62" height="62">
+										<div class="people__card">
+											<span class="people__name">Harrison Phillips</span>
+											<span class="people__proffesion testimonial__text">Reporter</span>
+										</div>
+									</div>
+									<div class="testimonial__box">
+										<p class="testimonial__text">
+											Nisi cumque in necessitatibus molestiae eaque excepturi ab. Laboriosam
+											ipsam voluptatem voluptatibus labore quam nihil. Quasi occaecati quos
+											ratione quia aut molestiae velit et. Voluptatem id ea dicta inventore et quo impedit repudiandae.
+											Qui officia aperiam atque qui occaecati est. Magnam voluptatem earum excepturi qui quae ea qui.
+										</p>
+									</div>
+								</article>
+							</div>
+							<div class="swiper_slide">
+								<article class="testimonial__card">
+									<div class="people">
+										<img class="people__img" src="img/testimonial_2.png" alt="face" width="62" height="62">
+										<div class="people__card">
+											<span class="people__name">Ainara Vergaras</span>
+											<span class="people__proffesion testimonial__text">Landscape Architect</span>
+										</div>
+									</div>
+									<div class="testimonial__box">
+										<p class="testimonial__text">
+											Aut consectetur voluptas. Voluptatem minus quo voluptas in nulla iste. Fugiat alias sit
+											sed dolorem quo. Qui praesentium et doloribus minima neque. Facere debitis sed est
+											suscipit velit reprehenderit. Dolores aliquid dolore consequuntur ex.
+										</p>
+									</div>
+								</article>
+							</div>
+							<div class="swiper_slide">
+								<article class="testimonial__card">
+									<div class="people">
+										<img class="people__img" src="img/testimonial_3.png" alt="face" width="62" height="62">
+										<div class="people__card">
+											<span class="people__name">Niek Bove</span>
+											<span class="people__proffesion testimonial__text">Senior Developer</span>
+										</div>
+									</div>
+									<div class="testimonial__box">
+										<p class="testimonial__text">
+											Rem quia possimus eum adipisci autem aut sunt laboriosam autem. Qui soluta ut
+											aut excepturi dolorem laborum ut. Qui alias aut provident quas illo. Eveniet debitis
+											totam quaerat. Enim voluptatem fuga qui. Numquam iusto vero ipsa eveniet
+											iusto.
+										</p>
+									</div>
+								</article>
+							</div>
+							<div class="swiper_slide">
+								<article class="testimonial__card">
+									<div class="people">
+										<img class="people__img" src="img/testimonial_1.png" alt="face" width="62" height="62">
+										<div class="people__card">
+											<span class="people__name">Harrison Phillips</span>
+											<span class="people__proffesion testimonial__text">Reporter</span>
+										</div>
+									</div>
+									<div class="testimonial__box">
+										<p class="testimonial__text">
+											Nisi cumque in necessitatibus molestiae eaque excepturi ab. Laboriosam
+											ipsam voluptatem voluptatibus labore quam nihil. Quasi occaecati quos
+											ratione quia aut molestiae velit et. Voluptatem id ea dicta inventore et quo impedit repudiandae.
+											Qui officia aperiam atque qui occaecati est. Magnam voluptatem earum excepturi qui quae ea qui.
+										</p>
+									</div>
+								</article>
+							</div>
+							<div class="swiper_slide">
+								<article class="testimonial__card">
+									<div class="people">
+										<img class="people__img" src="img/testimonial_2.png" alt="face" width="62" height="62">
+										<div class="people__card">
+											<span class="people__name">Ainara Vergaras</span>
+											<span class="people__proffesion testimonial__text">Landscape Architect</span>
+										</div>
+									</div>
+									<div class="testimonial__box">
+										<p class="testimonial__text">
+											Aut consectetur voluptas. Voluptatem minus quo voluptas in nulla iste. Fugiat alias sit
+											sed dolorem quo. Qui praesentium et doloribus minima neque. Facere debitis sed est
+											suscipit velit reprehenderit. Dolores aliquid dolore consequuntur ex.
+										</p>
+									</div>
+								</article>
+							</div>
+							<div class="swiper_slide">
+								<article class="testimonial__card">
+									<div class="people">
+										<img class="people__img" src="img/testimonial_3.png" alt="face" width="62" height="62">
+										<div class="people__card">
+											<span class="people__name">Niek Bove</span>
+											<span class="people__proffesion testimonial__text">Senior Developer</span>
+										</div>
+									</div>
+									<div class="testimonial__box">
+										<p class="testimonial__text">
+											Rem quia possimus eum adipisci autem aut sunt laboriosam autem. Qui soluta ut
+											aut excepturi dolorem laborum ut. Qui alias aut provident quas illo. Eveniet debitis
+											totam quaerat. Enim voluptatem fuga qui. Numquam iusto vero ipsa eveniet
+											iusto.
+										</p>
+									</div>
+								</article>
+							</div>
+						</div>
+						<div class="swiper-pagination"></div>
 					</div>
 				</section>
 			</div>
