--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 							</div>
 						</div>
 						<!-- Add Pagination -->
-						<div class="swiper-pagination"></div>
+						<div class="swiper-pagination pag__1"></div>
 					</div>
 
 				</section>
@@ -526,7 +526,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="swiper-pagination"></div>
+						<div class="swiper-pagination pag__2"></div>
 					</div>
 				</section>
 			</div>
@@ -677,7 +677,7 @@
 									</p>
 							</div>
 						</div>
-						<div class="swiper-pagination"></div>
+						<div class="swiper-pagination pag__3"></div>
 					</div>
 
 				</section>
@@ -699,58 +699,6 @@
 							alterum. Si sine causa? quae fuerit causa, mox videro; interea hoc epicurus in liberos.
 						</p>
 					</div>
-					<!-- <div class="testimonial__wrapper">
-						<article class="testimonial__card">
-							<div class="people">
-								<img class="people__img" src="img/testimonial_1.png" alt="face" width="62" height="62">
-								<div class="people__card">
-									<span class="people__name">Harrison Phillips</span>
-									<span class="people__proffesion testimonial__text">Reporter</span>
-								</div>
-							</div>
-							<div class="testimonial__box">
-								<p class="testimonial__text">
-									Nisi cumque in necessitatibus molestiae eaque excepturi ab. Laboriosam
-									ipsam voluptatem voluptatibus labore quam nihil. Quasi occaecati quos
-									ratione quia aut molestiae velit et. Voluptatem id ea dicta inventore et quo impedit repudiandae.
-									Qui officia aperiam atque qui occaecati est. Magnam voluptatem earum excepturi qui quae ea qui.
-								</p>
-							</div>
-						</article>
-						<article class="testimonial__card">
-							<div class="people">
-								<img class="people__img" src="img/testimonial_2.png" alt="face" width="62" height="62">
-								<div class="people__card">
-									<span class="people__name">Ainara Vergaras</span>
-									<span class="people__proffesion testimonial__text">Landscape Architect</span>
-								</div>
-							</div>
-							<div class="testimonial__box">
-								<p class="testimonial__text">
-									Aut consectetur voluptas. Voluptatem minus quo voluptas in nulla iste. Fugiat alias sit
-									sed dolorem quo. Qui praesentium et doloribus minima neque. Facere debitis sed est
-									suscipit velit reprehenderit. Dolores aliquid dolore consequuntur ex.
-								</p>
-							</div>
-						</article>
-						<article class="testimonial__card">
-							<div class="people">
-								<img class="people__img" src="img/testimonial_3.png" alt="face" width="62" height="62">
-								<div class="people__card">
-									<span class="people__name">Niek Bove</span>
-									<span class="people__proffesion testimonial__text">Senior Developer</span>
-								</div>
-							</div>
-							<div class="testimonial__box">
-								<p class="testimonial__text">
-									Rem quia possimus eum adipisci autem aut sunt laboriosam autem. Qui soluta ut
-									aut excepturi dolorem laborum ut. Qui alias aut provident quas illo. Eveniet debitis
-									totam quaerat. Enim voluptatem fuga qui. Numquam iusto vero ipsa eveniet
-									iusto.
-								</p>
-							</div>
-						</article>
-					</div> -->
 
 					<div class="swiper-container_4">
 						<div class="swiper-wrapper">
@@ -867,7 +815,7 @@
 								</article>
 							</div>
 						</div>
-						<div class="swiper-pagination"></div>
+						<div class="swiper-pagination pag__4"></div>
 					</div>
 				</section>
 			</div>
@@ -927,9 +875,6 @@
 				</ul>
 			</nav>
 			<div class="footer__social">
-				<!-- <img class="footer__icon" src="img/icon/facebook_white.svg" alt="facebook" width="9" height="16">
-				<img class="footer__icon" src="img/icon/twitter_white.svg" alt="twitter" width="16" height="14">
-				<img class="footer__icon" src="img/icon/instagram_white.svg" alt="instagram" width="16" height="16"> -->
 				<svg class="footer__icon footer__icon--fb" width="9" height="16">
 					<use xlink:href="sprite.svg#facebook"></use>
 				</svg>
