--- a/index.html
+++ b/index.html
@@ -672,100 +672,99 @@
 					</p>
 				</div>
 				<div class="swiper-container swiper-container__testimonial">
-					<div class="swiper-wrapper">
-						<div class="swiper_slide testimonial__slide">
-								<div class="people">
-									<img class="people__img" src="img/testimonial_1.png" alt="face" width="62" height="62">
-									<div class="people__card">
-										<span class="people__name">Harrison Phillips</span>
-										<span class="people__proffesion">Reporter</span>
-									</div>
+					<div class="swiper-wrapper testimonial__wrapper">
+						<div class="swiper-slide testimonial__slide">
+							<div class="people">
+								<img class="people__img" src="img/testimonial_1.png" alt="face" width="62" height="62">
+								<div class="people__card">
+									<span class="people__name">Harrison Phillips</span>
+									<span class="people__proffesion">Reporter</span>
 								</div>
-								<div class="testimonial__text">
-									Nisi cumque in necessitatibus molestiae eaque excepturi ab. Laboriosam
-									ipsam voluptatem voluptatibus labore quam nihil. Quasi occaecati quos
-									ratione quia aut molestiae velit et. Voluptatem id ea dicta inventore et quo impedit
-									repudiandae.
-									Qui officia aperiam atque qui occaecati est. Magnam voluptatem earum excepturi qui quae ea
-									qui.
-								</div>
+							</div>
+							<div class="testimonial__text">
+								Nisi cumque in necessitatibus molestiae eaque excepturi ab. Laboriosam
+								ipsam voluptatem voluptatibus labore quam nihil. Quasi occaecati quos
+								ratione quia aut molestiae velit et. Voluptatem id ea dicta inventore et quo impedit
+								repudiandae.
+								Qui officia aperiam atque qui occaecati est. Magnam voluptatem earum excepturi qui quae ea
+								qui.
+							</div>
 						</div>
-						<div class="swiper_slide testimonial__slide">
-								<div class="people">
-									<img class="people__img" src="img/testimonial_2.png" alt="face" width="62" height="62">
-									<div class="people__card">
-										<span class="people__name">Ainara Vergaras</span>
-										<span class="people__proffesion">Landscape Architect</span>
-									</div>
+						<div class="swiper-slide testimonial__slide">
+							<div class="people">
+								<img class="people__img" src="img/testimonial_2.png" alt="face" width="62" height="62">
+								<div class="people__card">
+									<span class="people__name">Ainara Vergaras</span>
+									<span class="people__proffesion">Landscape Architect</span>
 								</div>
-								<div class="testimonial__text">
-									Aut consectetur voluptas. Voluptatem minus quo voluptas in nulla iste. Fugiat alias sit
-									sed dolorem quo. Qui praesentium et doloribus minima neque. Facere debitis sed est
-									suscipit velit reprehenderit. Dolores aliquid dolore consequuntur ex.
-								</div>
+							</div>
+							<div class="testimonial__text">
+								Aut consectetur voluptas. Voluptatem minus quo voluptas in nulla iste. Fugiat alias sit
+								sed dolorem quo. Qui praesentium et doloribus minima neque. Facere debitis sed est
+								suscipit velit reprehenderit. Dolores aliquid dolore consequuntur ex.
+							</div>
 						</div>
-						<div class="swiper_slide testimonial__slide">
-								<div class="people">
-									<img class="people__img" src="img/testimonial_3.png" alt="face" width="62" height="62">
-									<div class="people__card">
-										<span class="people__name">Niek Bove</span>
-										<span class="people__proffesion">Senior Developer</span>
-									</div>
+						<div class="swiper-slide testimonial__slide">
+							<div class="people">
+								<img class="people__img" src="img/testimonial_3.png" alt="face" width="62" height="62">
+								<div class="people__card">
+									<span class="people__name">Niek Bove</span>
+									<span class="people__proffesion">Senior Developer</span>
 								</div>
-								<div class="testimonial__text">
-									Rem quia possimus eum adipisci autem aut sunt laboriosam autem. Qui soluta ut
-									aut excepturi dolorem laborum ut. Qui alias aut provident quas illo. Eveniet debitis
-									totam quaerat. Enim voluptatem fuga qui. Numquam iusto vero ipsa eveniet
-									iusto.
-								</div>
+							</div>
+							<div class="testimonial__text">
+								Rem quia possimus eum adipisci autem aut sunt laboriosam autem. Qui soluta ut
+								aut excepturi dolorem laborum ut. Qui alias aut provident quas illo. Eveniet debitis
+								totam quaerat. Enim voluptatem fuga qui. Numquam iusto vero ipsa eveniet
+								iusto.
+							</div>
 						</div>
-						<div class="swiper_slide testimonial__slide">
-								<div class="people">
-									<img class="people__img" src="img/testimonial_1.png" alt="face" width="62" height="62">
-									<div class="people__card">
-										<span class="people__name">Harrison Phillips</span>
-										<span class="people__proffesion">Reporter</span>
-									</div>
+						<div class="swiper-slide testimonial__slide">
+							<div class="people">
+								<img class="people__img" src="img/testimonial_1.png" alt="face" width="62" height="62">
+								<div class="people__card">
+									<span class="people__name">Harrison Phillips</span>
+									<span class="people__proffesion">Reporter</span>
 								</div>
-								<div class="testimonial__text">
-									Nisi cumque in necessitatibus molestiae eaque excepturi ab. Laboriosam
-									ipsam voluptatem voluptatibus labore quam nihil. Quasi occaecati quos
-									ratione quia aut molestiae velit et. Voluptatem id ea dicta inventore et quo impedit
-									repudiandae.
-									Qui officia aperiam atque qui occaecati est. Magnam voluptatem earum excepturi qui quae ea
-									qui.
-								</div>
+							</div>
+							<div class="testimonial__text">
+								Nisi cumque in necessitatibus molestiae eaque excepturi ab. Laboriosam
+								ipsam voluptatem voluptatibus labore quam nihil. Quasi occaecati quos
+								ratione quia aut molestiae velit et. Voluptatem id ea dicta inventore et quo impedit
+								repudiandae.
+								Qui officia aperiam atque qui occaecati est. Magnam voluptatem earum excepturi qui quae ea
+								qui.
+							</div>
 						</div>
-						<div class="swiper_slide testimonial__slide">
-								<div class="people">
-									<img class="people__img" src="img/testimonial_2.png" alt="face" width="62" height="62">
-									<div class="people__card">
-										<span class="people__name">Ainara Vergaras</span>
-										<span class="people__proffesion">Landscape Architect</span>
-									</div>
+						<div class="swiper-slide testimonial__slide">
+							<div class="people">
+								<img class="people__img" src="img/testimonial_2.png" alt="face" width="62" height="62">
+								<div class="people__card">
+									<span class="people__name">Ainara Vergaras</span>
+									<span class="people__proffesion">Landscape Architect</span>
 								</div>
-								<div class="testimonial__text">
-									Aut consectetur voluptas. Voluptatem minus quo voluptas in nulla iste. Fugiat alias sitsed dolorem quo.
-									Qui praesentium et doloribus minima neque. Facere debitis sed est
-									suscipit velit reprehenderit. Dolores aliquid dolore consequuntur ex.
-								</div>
+							</div>
+							<div class="testimonial__text">
+								Aut consectetur voluptas. Voluptatem minus quo voluptas in nulla iste. Fugiat alias sit
+								sed dolorem quo. Qui praesentium et doloribus minima neque. Facere debitis sed est
+								suscipit velit reprehenderit. Dolores aliquid dolore consequuntur ex.
+							</div>
 						</div>
-						<div class="swiper_slide testimonial__slide">
-								<div class="people">
-									<img class="people__img" src="img/testimonial_3.png" alt="face" width="62" height="62">
-									<div class="people__card">
-										<span class="people__name">Niek Bove</span>
-										<span class="people__proffesion">Senior Developer</span>
-									</div>
+						<div class="swiper-slide testimonial__slide">
+							<div class="people">
+								<img class="people__img" src="img/testimonial_3.png" alt="face" width="62" height="62">
+								<div class="people__card">
+									<span class="people__name">Niek Bove</span>
+									<span class="people__proffesion">Senior Developer</span>
 								</div>
-								<div class="testimonial__text">
-									Rem quia possimus eum adipisci autem aut sunt laboriosam autem. Qui soluta ut
-									aut excepturi dolorem laborum ut. Qui alias aut provident quas illo. Eveniet debitis
-									totam quaerat. Enim voluptatem fuga qui. Numquam iusto vero ipsa eveniet
-									iusto.
-								</div>
+							</div>
+							<div class="testimonial__text">
+								Rem quia possimus eum adipisci autem aut sunt laboriosam autem. Qui soluta ut
+								aut excepturi dolorem laborum ut. Qui alias aut provident quas illo. Eveniet debitis
+								totam quaerat. Enim voluptatem fuga qui. Numquam iusto vero ipsa eveniet
+								iusto.
+							</div>
 						</div>
-					</div>
 					<div class="swiper-pagination"></div>
 				</div>
 			</div>
@@ -773,13 +772,13 @@
 
 		<!-- Секция с кнопкой и призывом к действию -->
 
-		<section class="action">
-			<div class="container">
+		<section class="bg-grey">
+			<div class="container action">
 				<div class="action__title">
 					Ready to chase your dreams?
 				</div>
-				<button class="button button__action">
-					<span class="button__text">Apply Online</span>
+				<button class="button banner__button">
+					Apply Online
 					<img class="button__arrow" src="img/icon/arrow.svg" alt="arrow" width="18" height="16">
 				</button>
 			</div>
@@ -788,8 +787,8 @@
 
 	<!-- Подвал -->
 
-	<footer class="footer">
-		<div class="container">
+	<footer class="bg-violet">
+		<div class="container footer">
 			<div class="footer__info">
 				<div class="logo logo__footer">
 					<img src="img/logo_white.png" alt="logo" width="160" height="57">
@@ -836,5 +835,4 @@
 	<script src="swiper/swiper-bundle.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
-
 </html>
