адаптивная верстка без слайдеров

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<svg class="social__icon social__icon--fb social__icon--banner" width="11" height="20">
 								<use xlink:href="sprite.svg#facebook"></use>
 							</svg>
-							<svg class="social__icon social__icon--fb social__icon--banner" width="21" height="18">
+							<svg class="social__icon social__icon--twitter social__icon--banner" width="21" height="18">
 								<use xlink:href="sprite.svg#twitter_24px"></use>
 							</svg>
 							<svg class="social__icon social__icon--inst social__icon--banner" width="21" height="22">
@@ -347,7 +347,7 @@
 				<div class="swiper-pagination"></div>
 				<button class="button news__button">
 					Join Here
-					<svg class="button__arrow" width="18" height="16">
+					<svg class="button__arrow news__button-arrow" width="18" height="16">
 						<use xlink:href="sprite.svg#arrow"></use>
 					</svg>
 				</button>
@@ -829,6 +829,17 @@
 				<svg class="footer__icon" width="16" height="16">
 					<use xlink:href="sprite.svg#instagram"></use>
 				</svg>
+				<address class="address__mobile">
+					<span class="address__text footer__text">
+						Concord Royal Court (3rd floor)
+					</span>
+					<span class="address__text footer__text">
+						Dhanmondi, Dhaka 1209, Bangladesh.
+					</span>
+					<span class="footer__text corporation">
+						© 2020 Executive Trade International.
+					</span>
+				</address>
 			</div>
 		</div>
 	</footer>
